--- a/3/index.html
+++ b/3/index.html
@@ -4,10 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
+        <div class="circle-container">
+            <div class="circle">
+                <button id="close">
+                    <i class="fas fa-times"></i>
+                </button>
+                <button id="open">
+                    <i class="fas fa-bars"></i>
+                </button>
+            </div>
+        </div>
+
+        <div class="content">
+            <h1>Amazing Article</h1>
+            <small>Florin pop</small>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus autem reiciendis corporis veniam eius quaerat quod voluptate iste tenetur officia, itaque ipsa nihil ullam odit in minus cumque quisquam at.</p>
+
+            <h3>My Dog</h3>
+            <img src="https://images.unsplash.com/photo-1507146426996-ef05306b995a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80" alt="doggy">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quam quasi totam eos sed, magni expedita, velit temporibus unde nisi incidunt sit aliquid odit illo cum repudiandae. Nostrum, inventore labore?</p>
+        </div>
+    </div>
+    <nav>
+        <ul>
+            <li><i class="fas fa-home"></i>Home</li>
+            <li><i class="fas fa-user-alt"></i>About</li>
+            <li><i class="fas fa-envelope"></i>contact</li>
+        </ul>
+    </nav>
     <script src="index.js"></script>
 </body>
 </html>
