--- a/50.insect-catch-game/index.html
+++ b/50.insect-catch-game/index.html
@@ -13,8 +13,8 @@
       <button class="btn" id="start-btn">Play Game</button>
     </div>
 
-    <div>ssasss</div>
-    
+    <div>ssasssdddddddddd</div>
+
     <div class="screen">
       <h1>What is your "favorite" insect?</h1>
       <ul class="insects-list">
